fix(a11y): better color contrasts and added label to menu button

--- a/components/Footer/index.module.css
+++ b/components/Footer/index.module.css
@@ -1,7 +1,7 @@
 .link {
   @apply mx-3;
-  @apply text-gray-400;
+  @apply text-gray-500;
 }
 .link:hover {
-  @apply text-gray-500;
+  @apply text-gray-600;
 }
